<resources>
    <string name="app_name">WiFiClub</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="logo_label">WIFICLUB</string>
    <string name="common_today">Today</string>
    <string name="common_ok">OK</string>
    <string name="common_next">Next</string>
    <string name="common_in">IN</string>
    <string name="common_out">OUT</string>
    <string name="common_on">On</string>
    <string name="common_off">Off</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_search">Search</string>
    <string name="common_no">No</string>
    <string name="common_confirm">Confirm</string>
    <string name="common_delete">Delete</string>
    <string name="common_save">OK</string>
    <string name="common_edit">Edit</string>
    <string name="common_add">Add</string>
    <string name="common_select">Select</string>
    <string name="common_undo">Undo</string>
    <string name="common_min">Min</string>
    <string name="common_uploading">uploading</string>
    <string name="common_remove">Remove</string>
    <string name="common_plus">+</string>
    <string name="common_loading_failed">Loading failed</string>
    <string name="common_try_again">Try again</string>
    <string name="common_name">Name</string>
    <string name="common_photo">Photo</string>
    <string name="common_home">Home</string>
    <string name="common_work">Work</string>
    <string name="common_age">Age</string>
    <string name="common_age_start">Start age</string>
    <string name="common_age_end">End age</string>
    <string name="common_username">Username</string>
    <string name="common_password">Password</string>
    <string name="common_required">Required</string>
    <string name="common_week">Week</string>
    <string name="common_confirm_delete">Confirm delete</string>
    <string name="common_confirm_save">Confirm save</string>
    <string name="common_male">male</string>
    <string name="common_female">female</string>
    <string name="common_deselect">Deselect</string>
    <string name="common_total">Total</string>
    <string name="common_operate_after_adding">(Operate after adding)</string>
    <string name="common_must_be_filled_in">{0} must be filled in!</string>
    <string name="common_must_be_larger_than">{0} must be larger than {1}</string>
    <string name="common_log_in_elsewhere_exit_now">log in elsewhere, exit now </string>
    <string name="common_password_size_message">The password should be 6&#8211;16 characters</string>
    <string name="common_username_size_message">The username should be 6&#8211;16 characters</string>
    <string name="common_product">Product</string>
    <string name="common_do_not_have_permission">You do not have this permission!</string>
    <string name="common_green_fee">Green-Fee</string>
    <string name="common_holes">holes</string>
    <string name="common_year">Year</string>
    <string name="common_month">Month</string>
    <string name="common_day">Day</string>
    <string name="common_hour">Hour</string>
    <string name="common_minute">Min</string>
    <string name="common_none"> </string>
    <string name="common_tel">Tel : </string>
    <string name="common_start_date">Start Date</string>
    <string name="common_end_date">End Date</string>
    <string name="common_continue">Continue</string>
    <string name="error_mes00001">Name must be filled.</string>
    <string name="error_mes00002">Please input correct number.</string>
    <string name="error_mes00003">Please input correct phone number.</string>
    <string name="error_mes00004">Please input correct email.</string>
    <string name="error_mes00005">Can not sign more guests.</string>
    <string name="error_mes00006">You are booking in 9 hole only segment. Sure you want to continue?</string>
    <string name="error_mes00007">Someone has checked out.</string>
    <string name="error_mes00008">Caddies are all on the course.</string>
    <string name="title_about">About WiFiClub Systems Ltd.</string>
    <string name="title_forgot_password">Forgot password</string>
    <string name="title_change_password">Change password</string>
    <string name="title_administration">Administration</string>
    <string name="title_city_select">City</string>
    <string name="title_timezone_select">Timezone</string>
    <string name="title_currency_select">Currency</string>
    <string name="title_course_data">Course data</string>
    <string name="title_tee_times">Tee times</string>
    <string name="title_shopping_setting">Shop settings</string>
    <string name="title_promote_shop">Offers</string>
    <string name="title_qr_code">QR code</string>
    <string name="title_select_date">Choose Date</string>
    <string name="menu_user_name">User Name</string>
    <string name="menu_tee_times">Tee Times</string>
    <string name="menu_events">Events</string>
    <string name="menu_shops">Shops</string>
    <string name="menu_customers">Customers</string>
    <string name="menu_agents">Agents</string>
    <string name="menu_staff">Staff</string>
    <string name="menu_news">News</string>
    <string name="menu_charts">Reports</string>
    <string name="menu_administration">Administration</string>
    <string name="menu_scan_qr_code">Scan QR code</string>
    <string name="menu_logout">Log out</string>
    <string name="menu_separator">-</string>
    <string name="login_btn_content">LOG IN</string>
    <string name="login_about">About WiFiClub Systems Ltd.</string>
    <string name="login_forgot_password">Forgot password?</string>
    <string name="login_forgot_password_input_account">Please input your account</string>
    <string name="about_email">Email</string>
    <string name="about_phone">Phone No.</string>
    <string name="about_office_address">Office address</string>
    <string name="about_email_content">Alex.armas@iteesystems.com</string>
    <string name="about_phone_content">13333333333</string>
    <string name="about_office_address_content">45 Wycombe End, Beaconsfield,\nBuckinghamshire,HP9 1LZ.</string>
    <string name="about_version">Version</string>
    <string name="forgot_password">Forgot password</string>
    <string name="forgot_password_account">Please input your account</string>
    <string name="forgot_password_send_random_password">Send random password</string>
    <string name="forgot_password_tips">Tips : Temporary password will be sent to your mobilephone or email,please login and change your password.</string>
    <string name="change_password">change password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="new_password">New password</string>
    <string name="old_password">Old password</string>
    <string name="tee_time_setting">Tee time setting</string>
    <string name="transfer_time">Transfer time</string>
    <string name="reservation_time">Reservation time</string>
    <string name="title_activity_segment_times">Segment times</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="add_message_text">Add a profile</string>
    <string name="segment_tee_times">Tee times</string>
    <string name="segment_segment_times">Segment times</string>
    <string name="newteetimes_caddie">Caddie</string>
    <string name="newteetimes_name_hint">Name</string>
    <string name="newteetimes_tel_hint">Tel</string>
    <string name="newteetimes_tel_title_start">New Tee Times(</string>
    <string name="newteetimes_tel_title_end">)</string>
    <string name="newteetimes_btn_incoming_add">Add</string>
    <string name="newteetimes_btn_incoming_delete">Delete</string>
    <string name="newteetimes_btn_incoming_call">Call</string>
    <string name="newteetimes_btn_add_a_profile">Add a profile</string>
    <string name="teetimes_actionbar_incoming">Incoming record</string>
    <string name="msg_save_change">Save Changes?</string>
    <string name="msg_confirm_call">Call：</string>
    <string name="newteetimes_members">Members</string>
    <string name="newteetimes_agents">Agents</string>
    <string name="newteetimes_events">Events</string>
    <string name="newteetimes_no_members">Non-members</string>
    <string name="newteetimes_menu_cart">Cart</string>
    <string name="newteetimes_menu_clubs">Clubs</string>
    <string name="newteetimes_menu_shoes">Shoes</string>
    <string name="newteetimes_menu_trolley">Trolley</string>
    <string name="newteetimes_menu_umbrella">Umbrella</string>
    <string name="newteetimes_menu_towel">Towel</string>
    <string name="title_activity_new_course_message">OUT</string>
    <string name="title_activity_single_hole_message">Hole1</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete_button">Delete</string>
    <string name="add_course">Course</string>
    <string name="add_out">OUT</string>
    <string name="add_holes">Holes</string>
    <string name="add_yards">Yards/Metres</string>
    <string name="add_index">Index</string>
    <string name="index_enter">Please enter an integer 1-18</string>
    <string name="add_transfer_course">Transfer course</string>
    <string name="add_in">IN</string>
    <string name="add_transfer_time">Transfer time</string>
    <string name="add_calculate">Calculate</string>
    <string name="add_tee">TEE</string>
    <string name="add_time">2h30</string>
    <string name="add_title_out">OUT</string>
    <string name="add_title_add_course">Add course</string>
    <string name="par_is_not_null">Par is not null</string>
    <string name="time_is_out_of_range">Time is out of range</string>
    <string name="please_enter_time">Please enter time</string>
    <string name="course_hole_setting_hole_no">Hole No.</string>
    <string name="course_add_tee">Add TEE</string>
    <string name="course_name_is_not_null">courseName is not null</string>
    <string name="course_tee">TEES</string>
    <string name="course_hole_setting_par">Par</string>
    <string name="course_hole_setting_hdcp">HDCP</string>
    <string name="course_hole_setting_pace">Pace</string>
    <string name="course_hole_setting_black_tee">Black TEE</string>
    <string name="course_hole_setting_gold_tee">Golden TEE</string>
    <string name="course_hole_setting_blue_tee">Blue TEE</string>
    <string name="course_hole_setting_white_tee">White TEE</string>
    <string name="course_hole_setting_red_tee">Red TEE</string>
    <string name="course_hole_setting_add_tee">Add TEE</string>
    <string name="course_hole_setting_hole">Hole</string>
    <string name="course_setting_time">2.5H</string>
    <string name="course_setting_par">Par</string>
    <string name="course_course">Course</string>
    <string name="course_black">Black</string>
    <string name="player_info_tel_type_home">Home</string>
    <string name="player_info_tel_type_work">Work</string>
    <string name="player_info_tel_type_mobile">Mobile</string>
    <string name="player_info_tel_type_other">Other</string>
    <string name="player_info_tel_type_custom">Custom</string>
    <string name="tag_home">Home</string>
    <string name="tag_work">Work</string>
    <string name="tag_mobile">Mobile</string>
    <string name="tag_other">Other</string>
    <string name="tag_custom">Custom</string>
    <string name="segment_times_two_tee_start">Two tee start</string>
    <string name="segment_times_nine_holes_only">9 holes only</string>
    <string name="segment_times_block_times">Block times</string>
    <string name="segment_times_member_only">Member only</string>
    <string name="segment_times_three_tee_start">Three tee start</string>
    <string name="segment_times_prime_time">Prime time</string>
    <string name="date_format_yyyy_mm_dd">YY/MM/DD</string>
    <string name="date_format_mm_dd_yyyy">MM/DD/YY</string>
    <string name="date_format_dd_mm_yyyy">DD/MM/YY</string>
</resources>