<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    >

    <LinearLayout
        android:id="@+id/pop_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#ffffff"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        >


        <cn.situne.itee.view.IteeTextView
            android:id="@+id/btn_two_tee_start"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#ffffff"
            android:gravity="center"
            android:text="@string/segment_times_two_tee_start"
            android:textColor="@color/common_blue"
            android:textStyle="bold"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/common_blue"/>

        <cn.situne.itee.view.IteeTextView
            android:id="@+id/btn_nine_holes_only"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#ffffff"
            android:gravity="center"
            android:text="@string/segment_times_nine_holes_only"
            android:textColor="@color/common_blue"
            android:textStyle="bold"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/common_blue"/>

        <cn.situne.itee.view.IteeTextView
            android:id="@+id/btn_block_times"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#ffffff"
            android:gravity="center"
            android:text="@string/segment_times_block_times"
            android:textColor="@color/common_blue"
            android:textStyle="bold"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/common_blue"/>

        <cn.situne.itee.view.IteeTextView
            android:id="@+id/btn_member_only"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#ffffff"
            android:gravity="center"
            android:text="@string/segment_times_member_only"
            android:textColor="@color/common_blue"
            android:textStyle="bold"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/common_blue"/>

        <cn.situne.itee.view.IteeTextView
            android:id="@+id/btn_three_tee_start"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#ffffff"
            android:gravity="center"
            android:text="@string/segment_times_three_tee_start"
            android:textColor="@color/common_blue"
            android:textStyle="bold"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/common_blue"/>

        <cn.situne.itee.view.IteeTextView
            android:id="@+id/btn_prime_time"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#ffffff"
            android:gravity="center"
            android:text="@string/segment_times_prime_time"
            android:textColor="@color/common_blue"
            android:textStyle="bold"
            />

    </LinearLayout>
</RelativeLayout>