<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:id="@+id/pop_layout"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_tee_members"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:background="@color/common_white">

        <cn.situne.itee.view.IteeTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newteetimes_members"
            android:layout_marginLeft="50dp"
            android:textColor="@color/common_blue" />

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/common_gray" />




    <LinearLayout
        android:id="@+id/ll_tee_no_members"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:background="@color/common_white">

        <cn.situne.itee.view.IteeTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newteetimes_no_members"
            android:layout_marginLeft="50dp"
            android:textColor="@color/common_blue" />

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/common_gray" />


    <LinearLayout
        android:id="@+id/ll_tee_agents"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:background="@color/common_white">

        <cn.situne.itee.view.IteeTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:text="@string/newteetimes_agents"
            android:textColor="@color/common_blue" />

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/common_gray" />

    <LinearLayout
        android:id="@+id/ll_tee_events"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:background="@color/common_white">

        <cn.situne.itee.view.IteeTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:text="@string/newteetimes_events"
            android:textColor="@color/common_blue" />

    </LinearLayout>


</LinearLayout>
